@@ -164,6 +164,7 @@
 	SETUP_EVENT(AllowUnitCreation,      MANAGED_BIT | CONTROL_BIT)
 	SETUP_EVENT(AllowUnitTransfer,      MANAGED_BIT | CONTROL_BIT)
 	SETUP_EVENT(AllowUnitBuildStep,     MANAGED_BIT | CONTROL_BIT)
+	SETUP_EVENT(AllowUnitTransport,     MANAGED_BIT | CONTROL_BIT)
 	SETUP_EVENT(AllowFeatureCreation,   MANAGED_BIT | CONTROL_BIT)
 	SETUP_EVENT(AllowFeatureBuildStep,  MANAGED_BIT | CONTROL_BIT)
 	SETUP_EVENT(AllowResourceLevel,     MANAGED_BIT | CONTROL_BIT)
